# rtg

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  config.example.toml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality-gate.yml  release.yml
docs/: ARCHITECTURE.md  HOTKEYS.md  MODULE-DECOMPOSITION.md  RELEASES.md  REVIEW_BACKLOG.md  SECURITY-SECRET-HANDLING.md  auth-connectivity-status-model.md  phase-roadmap-rebaseline.md  phase1-layer-data-flow.md  phase2-quality-gate.md  phase3-operator-observability-runbook.md  phase3-release-gate.md  project-structure.md  refactoring-guide.md  security-secret-handling.md
docs/features/: CHAT_LIVE_UPDATES.md  MESSAGE_CACHE_PLAN.md  PROJECT_STRUCTURE_NOTES.md  RTG_REVIEW_BACKLOG.md  TDLIB_MIGRATION_PLAN.md
src/: app.rs  cli.rs  main.rs  test_support.rs
src/domain/: chat.rs  chat_info_state.rs  chat_list_state.rs  chat_search_state.rs  chat_subtitle.rs  command_popup_state.rs  events.rs  forum_topic.rs  forum_topic_list_state.rs  help_content.rs  keymap.rs  message.rs  message_cache.rs  message_info_state.rs  message_input_state.rs  mod.rs  open_chat_state.rs  open_defaults.rs  open_handler.rs  reaction_picker_state.rs  selectable_list.rs  shell_state.rs  status.rs  typing_state.rs  voice_defaults.rs
src/infra/: contracts.rs  error.rs  logging.rs  mod.rs  opener.rs  secrets.rs  storage_layout.rs  stubs.rs
src/telegram/: auth.rs  auth_impl.rs  chat_updates.rs  connectivity.rs  message_pagination.rs  mod.rs  status_tracker.rs  tdlib_auth.rs  tdlib_cache.rs  tdlib_client.rs  tdlib_mappers.rs  tdlib_updates.rs  trait_impls.rs
src/ui/: chat_info_popup.rs  chat_message_list.rs  chat_search_popup.rs  command_popup.rs  (+13 more)
(+209 files in other folders)
