[package]
name = "rtg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
crossterm = "0.29"
ratatui = "0.29"
rpassword = "7.3"
tdlib-rs = { version = "1.3", features = ["download-tdlib"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
fs2 = "0.4"
unicode-width = "0.2"
arboard = "3"
open = "5"
libc = "0.2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.25.0"
